<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/item_reddit_card_height"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/item_reddit_margin_vertical"
        android:layout_marginBottom="@dimen/item_reddit_margin_vertical"
        android:foreground="?android:attr/selectableItemBackground"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="0dp"
        card_view:cardUseCompatPadding="false"
        card_view:contentPadding="@dimen/item_reddit_card_padding">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/item_icon"
                android:layout_width="@dimen/item_icon_size"
                android:layout_height="@dimen/item_icon_size"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:contentDescription="@string/item_icon_description" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/item_description_margin"
                android:layout_marginLeft="@dimen/item_description_margin"
                android:layout_marginEnd="@dimen/item_description_margin"
                android:layout_marginRight="@dimen/item_description_margin"
                android:layout_toEndOf="@+id/item_icon"
                android:layout_toRightOf="@id/item_icon"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:text="@string/placeholder_title"
                    android:textAppearance="@style/TextAppearance.Medium"
                    android:textColor="@color/primary_text"
                    android:textSize="@dimen/item_title_text_size" />

                <TextView
                    android:id="@+id/item_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="3"
                    android:text="@string/placeholder_description"
                    android:textColor="@color/secondary_text"
                    android:textSize="@dimen/item_artist_text_size" />

            </LinearLayout>

        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>