<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".presentation.details.DetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/app_bar_height"
                android:background="@color/icons">

                <ImageView
                    android:id="@+id/subreddit_banner"
                    android:layout_width="match_parent"
                    android:layout_height="140dp"
                    android:background="@color/accent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/subreddit_icon"
                    android:layout_width="72dp"
                    android:layout_height="72dp"
                    android:layout_centerInParent="true"
                    android:src="@mipmap/ic_launcher_round"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/subreddit_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/subreddit_icon"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/subreddit_name_placeholder"
                    android:textAppearance="@style/TextAppearance.Medium"
                    android:textSize="@dimen/subreddit_name_size" />

                <TextView
                    android:id="@+id/subreddit_subscribers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/subreddit_name"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="8dp"
                    android:text="@string/subreddit_subscribers_placeholder"
                    android:textAppearance="@style/TextAppearance.Italic"
                    android:textSize="@dimen/subreddit_subscribers_size" />

            </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/accent"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".presentation.details.DetailsActivity"
        tools:showIn="@layout/activity_details">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            android:scrollbarAlwaysDrawVerticalTrack="true">

            <TextView
                android:id="@+id/subreddit_public_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/large_text"
                android:textColor="@color/secondary_text" />

            <com.mukesh.MarkdownView
                android:id="@+id/subreddit_full_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_marginTop="8dp"
                android:textColor="@color/secondary_text" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
